# magic-wormhole

./: .appveyor.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .mypy.ini  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  NEWS.md  README.md  _version.pyi  bash-completions-version-4.patch  events.dot  newest-version.py  pipe2.py  pyproject.toml  recv.py  release-pyapp.py  rltest.py  run-mypy.py  send.py  setup.cfg  setup.py  snapcraft.yaml  tox.ini  update-version.py  versioneer.py  wormhole_complete.bash  wormhole_complete.fish  wormhole_complete.zsh
.github/workflows/: codeql.yml  codespell.yml  documentation-links.yml  pyapp.yml  release.yml  test.yml
chromeapp/: app.js  background.js  com.lothar.magic.wormhole.helper.json  dnd.js  helper.py  manifest.json  styles.css  window.html
docs/: CONTRIBUTING.rst  Makefile  _connection.dot  _events.dot  _states-code.dot  api-example.py  api.md  api.rst  attacks.md  attacks.rst  boss.dot  client-protocol.md  client-protocol.rst  code.dot  conf.py  dilation-protocol.md  dilation-protocol.rst  ecosystem.rst  events.dot  file-transfer-protocol.md  file-transfer-protocol.rst  how-to-release.md  how-to-release.rst  index.md  index.rst  introduction.md  introduction.rst  journal.md  journal.rst  key.dot  machines.dot  mailbox.dot  mailbox_close.dot  nameplates.dot  persistence.md  receive.dot  requirements.txt  send.dot  server-protocol.md  server-protocol.rst  (+19 more)
docs/releases/: release-announce-0.14.0.asc  release-announce-0.15.0.asc  release-announce-0.19.0.asc  release-announce-0.19.1.asc  release-announce-0.19.2.asc  release-announce-0.24.0.asc
docs/state-machines/: Makefile  _connection.dot  allocator.dot  boss.dot  code.dot  dilation.dot  input.dot  key.dot  lister.dot  machines.dot  mailbox.dot  mitigation.dot  nameplate.dot  nameplate_lister.dot  order.dot  receive.dot  send.dot  terminator.dot
misc/: demo-journal.py  dump-stats.py  dump-timing.py  run-deprecations.py  run-mypy.py  windows-build.cmd
misc/munin/: wormhole_active  wormhole_channels  wormhole_errors  wormhole_event_rate  wormhole_events  wormhole_events_alltime  wormhole_messages  wormhole_transit  wormhole_transit_alltime
misc/web/: timeline.css  timeline.html  timeline.js
presentation/: outline.md
pyi/: build-exe  wormhole.exe.spec
signatures/: README  magic-wormhole-0.10.0.tar.gz.asc  magic-wormhole-0.10.1.tar.gz.asc  magic-wormhole-0.10.2.tar.gz.asc  magic-wormhole-0.10.3.tar.gz.asc  magic-wormhole-0.10.4.tar.gz.asc  magic-wormhole-0.10.5.tar.gz.asc  magic-wormhole-0.11.0.tar.gz.asc  magic-wormhole-0.11.1.tar.gz.asc  magic-wormhole-0.11.2.tar.gz.asc  magic-wormhole-0.12.0.tar.gz.asc  magic-wormhole-0.13.0.tar.gz.asc  magic-wormhole-0.15.0.tar.gz.asc  magic-wormhole-0.16.0.tar.gz.asc  magic-wormhole-0.7.0.tar.gz.asc  magic-wormhole-0.7.5.tar.gz.asc  magic-wormhole-0.8.0.tar.gz.asc  magic-wormhole-0.8.1.tar.gz.asc  magic-wormhole-0.8.2.tar.gz.asc  magic-wormhole-0.9.0.tar.gz.asc  magic-wormhole-0.9.1.tar.gz.asc  magic-wormhole-0.9.2.tar.gz.asc  magic_wormhole-0.10.0-py2.py3-none-any.whl.asc  magic_wormhole-0.10.1-py2.py3-none-any.whl.asc  magic_wormhole-0.10.2-py2.py3-none-any.whl.asc  magic_wormhole-0.10.3-py2.py3-none-any.whl.asc  magic_wormhole-0.10.4-py2.py3-none-any.whl.asc  magic_wormhole-0.10.5-py2.py3-none-any.whl.asc  magic_wormhole-0.11.0-py2.py3-none-any.whl.asc  magic_wormhole-0.11.1-py2.py3-none-any.whl.asc  magic_wormhole-0.11.2-py2.py3-none-any.whl.asc  magic_wormhole-0.12.0-py2.py3-none-any.whl.asc  magic_wormhole-0.13.0-py3-none-any.whl.asc  magic_wormhole-0.15.0-py3-none-any.whl.asc  magic_wormhole-0.16.0-py3-none-any.whl.asc  magic_wormhole-0.17.0-py3-none-any.whl.asc  magic_wormhole-0.17.0.tar.gz.asc  magic_wormhole-0.19.0-py3-none-any.whl.asc  magic_wormhole-0.19.0.tar.gz.asc  magic_wormhole-0.19.1-py3-none-any.whl.asc  (+21 more)
snap/: snapcraft.yaml
src/twisted/plugins/: wormhole_server.py
src/txwormhole/: eventsource.py  tor_manager.py  transcribe.py  transit.py
src/wormhole/: __init__.py  __main__.py  _allocator.py  _boss.py  _c2.py  _c3.py  _code.py  _connection.py  _hints.py  _input.py  _interfaces.py  _key.py  _lister.py  _machine.py  _mailbox.py  _mitigation.py  _nameplate.py  _nameplate_lister.py  _order.py  _receive.py  _rendezvous.py  _rlcompleter.py  _send.py  _status.py  _terminator.py  _version.py  _version.pyi  _wordlist.py  _wormhole.py  channel_monitor.py  codes.py  const.py  database.py  dilatedfile.py  errors.py  eventual.py  ipaddrs.py  journal.py  misc.py  observer.py  (+17 more)
src/wormhole/_dilation/: _noise.py  connection.py  connector.py  encode.py  inbound.py  manager.py  old-follower.py  outbound.py  roles.py  subchannel.py
src/wormhole/blocking/: eventsource.py  transcribe.py  transit.py
src/wormhole/cli/: __init__.py  _workaround_9101.py  cli.py  cli_args.py  cmd_connect.py  cmd_forward.py  cmd_receive.py  cmd_send.py  cmd_ssh.py  progress.py  public_relay.py  runner.py  update_reminder.py  verify.py  welcome.py
src/wormhole/db-schemas/: v1.sql
src/wormhole/scripts/: cli_args.py  cmd_receive.py  cmd_receive_blocking.py  cmd_receive_file.py  cmd_receive_text.py  cmd_receive_twisted.py  cmd_send.py  cmd_send_blocking.py  cmd_send_file.py  cmd_send_text.py  cmd_send_twisted.py  (+3 more)
src/wormhole_cli/: cli_args.py  cmd_receive.py  cmd_send.py  runner.py
src/wormhole_server/: cmd_server.py  cmd_usage.py  database.py  relay_server.py  rendezvous.py  rendezvous_web.py  rendezvous_websocket.py  runner.py  server.py
tests/: common.py  test_blocking.py  test_hkdf.py  test_scripts.py  test_server.py  test_transit_twisted.py  test_twisted.py
(+90 files in other folders)
