[build-system]
requires = ["setuptools>=64.0.0", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/wormhole/_version.py"
versionfile_build = "wormhole/_version.py"
tag_prefix = ""
parentdir_prefix = "magic-wormhole-"


[project]
authors = [
    {name = "Brian Warner", email = "warner-magic-wormhole@lothar.com"}
]
maintainers = [
    {name = "meejah", email = "meejah@meejah.ca"}
]
description = "Securely transfer data between computers"
readme = "README.md"
license = "MIT"
dependencies = [
    "spake2==0.9", "pynacl",
    "attrs >= 19.2.0", # 19.2.0 replaces cmp parameter with eq/order
    "twisted[tls] >= 17.5.0", # 17.5.0 adds failAfterFailures=
    "autobahn[twisted] >= 0.14.1",
    "automat",
    "cryptography",
    "tqdm >= 4.13.0", # 4.13.0 fixes crash on NetBSD
    "click",
    "humanize",
    "txtorcon >= 18.0.2", # 18.0.2 fixes py3.4 support
    "zipstream-ng >= 1.7.1, <2.0.0",
    "iterable-io >= 1.0.0, <2.0.0",
    "qrcode >= 8.0",
    'pywin32; sys_platform=="win32"',
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
data_files = [
    ("", ["wormhole_complete.bash", "wormhole_complete.zsh", "wormhole_complete.fish"]),
]


[project.optional-dependencies]
dev = [
    "tox",
    "pyflakes",
    "magic-wormhole-transit-relay==0.3.1",
    "magic-wormhole-mailbox-server==0.3.1",
    "pytest",
    "pytest_twisted",
]
dilate = [
    "noiseprotocol",
]
build = [
    "twine",
    "dulwich",
    "readme_renderer",
    "gpg",
    "wheel",
]


[project.scripts]
wormhole = "wormhole.cli.cli:wormhole"


[project.urls]
Homepage = "https://github.com/warner/magic-wormhole"
Documentation = "https://magic-wormhole.readthedocs.io/en/latest/"
Repository = "https://github.com/warner/magic-wormhole"
